--- a/views/partials/footer.twig
+++ b/views/partials/footer.twig
@@ -1,4 +1,4 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="js/min/main.min.js"></script>
+<script src="/js/min/main.min.js"></script>
 </body>
 </html>
