--- a/views/base.twig
+++ b/views/base.twig
@@ -8,3 +8,12 @@
 <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
+
+  <div class="content">
+    {% block content %}{% endblock %}
+  </div>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="/js/min/main.min.js"></script>
+</body>
+</html>
