--- a/views/index.twig
+++ b/views/index.twig
@@ -1,5 +1,7 @@
-{% include 'partials/header.twig' %}
+{% extends 'base.twig' %}
+
+{% block content %}
 
 <h1>Hello, world!</h1>
 
-{% include 'partials/footer.twig' %}
+{% endblock %}
